--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
 /*TODO #4
+First BP  985 × 856 
+
 TODO #5*/
 html, body {
     min-height: 100%;
     }
-    body, div, form, input, select, textarea, label, p { 
+body, div, form, input, select, textarea, label, p { 
     padding: 0;
     margin: 0;
     outline: none;
@@ -12,7 +14,7 @@ html, body {
     color: #666;
     line-height: 22px;
     }
-    h1 {
+h1 {
     position: absolute;
     margin: 0;
     font-size: 40px;
@@ -20,138 +22,80 @@ html, body {
     z-index: 2;
     line-height: 83px;
     }
-    textarea {
+textarea {
     width: calc(100% - 12px);
     padding: 5px;
     resize: none;
     }
-    a {
-        color: #19a8e6;
-    }
- h2 {
-    width: 100%;
-    }
-    .container {
+
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: inherit;
     padding: 20px;
     }
-    form {
+form {
     max-width: 40%;
     padding: 20px;
     border-radius: 6px;
     background: #fff;
     box-shadow: 0 0 8px  #aaacad; 
     }
-    .banner {
+ .banner {
     height: 100px;
     display: flex;
     align-items: center;
-
     }
-    
-    input, select, textarea {
+input, select, textarea {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
     }
-    input {
+input {
     width: calc(100% - 10px);
     padding: 5px;
     }
-    input[type="number"] {
-    width: 20%;
-    }
-    textarea {
+
+textarea {
     width: calc(100% - 12px);
     padding: 5px;
     }
-
-    .item input:hover, .item select:hover, .item textarea:hover {
+.item input:hover, .item select:hover, .item textarea:hover {
     border: 1px solid transparent;
     box-shadow: 0 0 3px 0  #19a8e6;
     color: #19a8e6;
     }
-    .item {
+.item {
     position: relative;
     margin: 10px 0;
     }
-    .item span {
+.item span {
     color: red;
     }
-    .week {
-    display:flex;
-    justify-content:space-between;
-    }
-    .colums {
+.colums {
     display:flex;
     justify-content:space-between;
     flex-direction:row;
     flex-wrap:wrap;
     }
-    .colums div {
+.colums div {
     width:48%;
     }
-
-    .item i {
+.item i {
     right: 1%;
     top: 30px;
     z-index: 1;
-    }
-    input[type=checkbox], input[type=checkbox]  {
-    display: none;
-    }
-    label.checkbox {
-    position: relative;
-    display: inline-block;
-    margin: 5px 20px 15px 0;
-    cursor: pointer;
-    }
-    .agb span {
-    margin-left: 30px;
-    }
-    .agb-answer label {
-    display: block;
-    }
-    label.checkbox:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 17px;
-    height: 17px;
-    border-radius: 25%;
-    border: 2px solid #ccc;
-    }
-    input[type=checkbox]:checked + label:before, label.checkbox:hover:before {
-    border: 2px solid  #19a8e6;
-    }
-    label.checkbox:after {
-    content: "";
-    position: absolute;
-    top: 6px;
-    left: 5px;
-    width: 8px;
-    height: 4px;
-    border: 3px solid  #19a8e6;
-    border-top: none;
-    border-right: none;
-    transform: rotate(-45deg);
-    opacity: 0;
-    }
-    input[type=checkbox]:checked + label:after {
-    opacity: 1;
-    }
-    .flax {
+    }    
+.flax {
     display:flex;
     justify-content:space-around;
     }
-    .btn-block {
+.btn-block {
     margin-top: 10px;
     text-align: center;
     }
-    button {
+button {
     width: 150px;
     padding: 10px;
     border: none;
@@ -161,22 +105,43 @@ html, body {
     color: #fff;
     cursor: pointer;
     }
-    button:hover {
+button:hover {
     background:  #9fcff0;
     }
-    @media (min-width: 568px) {
-    .name-item, .city-item {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+
+
+@media (max-width: 1020px){
+    form { max-width: 90%;
+}
+    h1 {
+        font-size: 32px;
     }
-    .name-item input, .name-item div {
-    width: calc(50% - 20px);
+}
+@media (max-width: 460px){
+    label {
+        font-size: 13px;
     }
-    .name-item div input {
-    width:97%;}
-    .name-item div label {
-    display:block;
-    padding-bottom:5px;
+    form {
+        max-width: 100%;
+        border-radius: 6px;
+        background: rgb(255, 255, 255);
+        box-shadow: 0 0 8px  #ebe8e8; 
     }
+    .colums {
+        flex-direction: column;
     }
+    h1 {
+        font-size: 26px;
+    }
+    .colums div {
+        width:100%;
+    }
+    button {
+        width: 120px;
+        
+    }
+    .banner {
+        height: 77px;
+    }
+
+}
