--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,9 @@ TODO #5*/
     max-height: 100vh;
     display: grid;
     grid-template-columns: 5% 1fr 1fr 6%;
-    grid-template-rows: 63px 1fr;
+    grid-template-rows: 65px 1fr;
     justify-items: center;
-    align-items: center;
+
     height: inherit;
     }
 .form {
@@ -18,9 +18,20 @@ TODO #5*/
     padding: 8px;
     margin-left: 8px;
 }
+.image, img {
+    grid-column: 1/3;
+    grid-row: 1/3;
+    justify-self: start;
+    align-self: center;
+    max-width: 100%;
+    height: auto;
+    margin-right: 60px;
+}
+
 form {
     max-width: 100%;
     padding: 20px;
+    padding-left: 7px;
     }
  .banner {
     height: 100px;
@@ -29,6 +40,9 @@ form {
     margin-bottom: 45px;
     }
 
+.end {
+    margin-left: 34px;
+}
 .item input:hover, .item select:hover, .item textarea:hover {
     border: 1px solid #4D61FC;
     }
@@ -40,7 +54,7 @@ form {
     margin: 10px 0;
     }
 .item span {
-    color: red;
+    color: #4D61FC;
     }
 .colums {
     display:flex;
@@ -53,7 +67,7 @@ form {
     }
   
 .btn-block {
-    margin-top: 10px;
+    margin-top: 25px;
 
     }
 button {
@@ -69,6 +83,7 @@ button {
     }
 button:hover {
     background:  #3644B1;
+    color: #e4e4e4;
     }
 
 
