--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,15 @@ TODO #5*/
     padding: 8px;
     margin-left: 8px;
 }
+.wrapper {
+    grid-column: 3 / 4;
+    grid-row: 2/3;
+    padding: 8px;
+    margin-left: 8px;
+    min-width:100%;
+    padding-left: 24px;
+    padding-top: 26px;
+}
 .image, img {
     grid-column: 1/3;
     grid-row: 1/3;
@@ -27,7 +36,21 @@ TODO #5*/
     height: auto;
     margin-right: 60px;
 }
-
+.msg {
+    height: 100px;
+    display: flex;
+    align-items: start;
+    margin-bottom: 45px;
+    flex-direction: column;
+}
+.test {
+    max-width: 100%;
+    padding: 25px;
+    padding-left: 7px;
+}
+div > p {
+    margin-top: 35px;
+}
 form {
     max-width: 100%;
     padding: 20px;
@@ -121,4 +144,21 @@ button:hover {
         height: 77px;
     }
 
+}
+div.msg > h1 {
+    position: relative;
+}
+.back img {
+   margin-right: 0;
+   rotate: 90deg;
+   width: 40%; 
+}
+.back {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+}
+.gif img {
+    max-width: 200%;
 }
