--- a/src/universal-styles.css
+++ b/src/universal-styles.css
@@ -16,7 +16,7 @@
 html, body {
     font-size: 62.5%;
     }
-body, div, form, input, select, textarea, label, p { 
+body, div, form, input, select, textarea, label { 
         padding: 0;
         margin: 0;
         outline: none;
@@ -32,8 +32,10 @@ h1 {
         font-family: Roboto-Medium, Arial, sans-serif;
         font-size: 4.1rem;
         color: #4D61FC;
-        line-height: 1.6;
+        line-height: 1.3;
      }
+
+
 input, textarea {
         width: calc(100% - 65px);
         padding: 6px;
@@ -50,4 +52,24 @@ textarea {
 }
 label {
     display: block;
+}
+p {
+    font-family: Roboto-Light, Arial, sans-serif;
+}
+a {
+    color: #f4f4f4;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 1.6rem;
+    position: relative;
+    top: -3px;
+}
+p > a {
+    color: #4D61FC;
+    text-decoration: underline dotted;
+    font-size: 1.8rem;
+    top: 0;
+    display: inline-block;
 }
