--- a/src/mobile_wichtel.css
+++ b/src/mobile_wichtel.css
@@ -20,8 +20,12 @@
         margin-top: 5px;
         margin-bottom: 35px;
 }
-.error {
+    .error {
     grid-template-columns: 5% 1fr 6%;
+}
+.back {
+    margin: 10px 0;
+
 }
 }
 @media (max-width: 838px){
@@ -30,6 +34,9 @@
     }
     .spongebob {
         width:100%;
+    }
+    .mobile {
+            flex-direction: column;
     }
 }
 @media (max-width: 650px){
@@ -61,9 +68,9 @@
     width: 121%;
     padding-left: 40px;
   }
-  .error {
-    margin-left: 26px;
-  }
+  .form.teilnehmer.padding-mobile {
+    padding-left:110px;
+}
   
 }
 
@@ -78,12 +85,33 @@
     div > p, a {
         font-size: 1.4rem;
 }
+@media (max-width: 484px){
+.subbanner {
+    max-width: 65%;
+  }
+  h2 {
+    font-size: 2.4rem;
+  }
+}}
+@media (max-width: 430px){
+    .btn-tracking {
+        display: block;
+        margin-left: 0;
+    }
+    .wichteltracking {
+        width: 58%;
+    }
+
 @media (max-width: 392px){
     .form.teilnehmer{
     width: 85%;
     margin-right: 55px;
     padding-left: 10px;
   }
+  .form.teilnehmer.padding-mobile {
+    width: 105%;
+  }
+  
 }
 @media (max-width:340px){
     .teilnehmer > form {
