--- a/src/wichtel.css
+++ b/src/wichtel.css
@@ -168,8 +168,8 @@ input[type="checkbox"] {
 a > img {
     margin-top: 0;
 }
-.info {
-    width: 27%!important;
+.colums div {
+    width: 27%;
 }
 div.item.info {
     display: grid;
