--- a/src/mobile_wichtel.css
+++ b/src/mobile_wichtel.css
@@ -38,9 +38,20 @@
     .mobile {
             flex-direction: column;
     }
+    p {
+        max-width: 100%;
+        overflow-wrap: break-word;
+    }
+    div.item.info {
+        width: 78%;
+      }
 }
 @media (max-width: 650px){
-   .colums {
+   .checkbox {
+    top: -1px;
+position: relative;
+   }
+    .colums {
     flex-direction: column;
    }
    .colums div {
@@ -65,16 +76,20 @@
         margin-bottom: 35px;
 }
     .form.teilnehmer {
-    width: 121%;
+    width: 100%;
     padding-left: 40px;
   }
-  .form.teilnehmer.padding-mobile {
-    padding-left:110px;
+//p width einfügen
+p {
+        width: 227%;
 }
   
 }
 
 @media (max-width: 550px){
+    .wrapper {
+        grid-row: 1/3;
+    }
     a > .backImg {
         width: 29%;
         margin: 0px 5px 5px 0;
@@ -94,6 +109,7 @@
   }
 }}
 @media (max-width: 430px){
+   
     .btn-tracking {
         display: block;
         margin-left: 0;
@@ -101,7 +117,7 @@
     .wichteltracking, .trackingsent {
         width: 58%;
     }
-
+    
 @media (max-width: 392px){
     .form.teilnehmer{
     width: 85%;
@@ -110,8 +126,9 @@
   }
   .form.teilnehmer.padding-mobile {
     width: 105%;
+    margin-right: 0px;
   }
-  
+ 
 }
 @media (max-width:340px){
     .teilnehmer > form {
@@ -120,6 +137,7 @@
     .error {
         margin-left:0;
     }
+   
 }
 @media (max-width:310px){
  
