--- a/src/mobile_wichtel.css
+++ b/src/mobile_wichtel.css
@@ -132,7 +132,7 @@ div.item.info {
         margin-left: 0;
     }
     .wichteltracking, .trackingsent {
-        width: 58%;
+        width: 90%;
     }
     
 @media (max-width: 392px){
@@ -161,7 +161,11 @@ h2 {
 .trackingsent {
     width: 100%;
     padding-left:10px;
-}}
+}
+.emailtrack-padding {
+    padding-left: 10px;
+}
+}
 @media (max-width:340px){
     .teilnehmer > form {
         padding: 20px
