mobile view anmeldung closed

--- a/src/mobile_submit.css
+++ b/src/mobile_submit.css
@@ -8,7 +8,11 @@
     .wrapper {
             grid-column: 2 / 4;
             margin-left:0;
-    }}
+    }
+    .closed {
+        height: auto;
+    }
+}
 @media (max-width: 1130px){
     h1 {
         font-size: 32px;
