--- a/src/mobile_wichtel.css
+++ b/src/mobile_wichtel.css
@@ -62,10 +62,10 @@ position: relative;
     }
     button {
     width: 90px;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     }
     .checkbox {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
     }
     h1 {
         font-size: 2.9rem;
@@ -105,7 +105,7 @@ h2 {
         margin: 10px 0;
     }
     div > p, a {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
 }
 div.item.info {
     width: 120%;
@@ -121,9 +121,15 @@ div.item.info {
 .subbanner {
     max-width: 65%;
   }
+  .subbanner-mobile-text {
+    width: 132%;
+  }
   h2 {
     font-size: 2.4rem;
   }
+  .form.teilnehmer {
+    padding-left: 22px;
+  
 }
 @media (max-width: 430px){
    
@@ -134,13 +140,12 @@ div.item.info {
     .wichteltracking, .trackingsent {
         width: 90%;
     }
+    div.item.info {
+        width: 115%;
+    }}
     
 @media (max-width: 392px){
-    .form.teilnehmer{
-    width: 85%;
-    margin-right: 55px;
-    padding-left: 10px;
-  }
+   
   .form.teilnehmer.padding-mobile {
     width: 105%;
     margin-right: 0px;
@@ -173,6 +178,13 @@ h2 {
     .error {
         margin-left:0;
     }
+    .wichteltracking, .trackingsent, h2, .padding-mobile {
+        width: auto;
+        padding-left: 0;
+      }
+      div.item.info {
+        width: 86%;
+      }
    
 }
 @media (max-width:310px){
