--- a/src/universal-styles.css
+++ b/src/universal-styles.css
@@ -73,25 +73,26 @@ p > a {
     top: 0;
     display: inline-block;
 }
+
 .hidden {
     display: none;
 }
 
 .editsuccess{
-    animation: editsuccess 2.81225417552045s ease-in-out;
-    opacity: 0;
+    color: #4D61FC;
+ animation: editsuccess 0.15s ease-in-out;
 
 }
 
-@keyframes editsuccess
+ @keyframes editsuccess
 {
-	from {
-		opacity: 1;
+	0% {
+		opacity: 0;
 	
 		
 	}
-	to{
-		opacity: 0;
+	100%{
+		opacity: 1;
 		
 
 
