--- a/src/wichtel.css
+++ b/src/wichtel.css
@@ -57,6 +57,11 @@ form {
     padding: 20px;
     padding-left: 7px;
     }
+.edit {
+    padding: 20px;
+    padding-top:0;
+    width: 100%;
+}
  .banner {
     height: 100px;
     display: flex;
@@ -88,14 +93,15 @@ form {
     }
 
 .btn-block {
-    margin-top: 25px;
+    margin-top: 10px;
     align-self: end;
     margin-bottom: 10px;
     margin-right: 24px;
     }
 button {
-    width: 120px;
+    width: 210px;
     padding: 10px;
+    margin-right: 15px;
     border: none;
     border-radius: 5px; 
     background:  #4D61FC;
@@ -103,12 +109,12 @@ button {
     color: #f4f4f4;
     cursor: pointer;
     font-family: Roboto-Regular;
-    
     }
 button:hover {
     background:  #3644B1;
     color: #e4e4e4;
     }
+
 
 
 
@@ -151,9 +157,7 @@ div.msg > h1 {
 #code {
     margin-bottom: 0;
 }
-.save {
-    margin-top: 7px;
-}
+
 input[type="checkbox"] {
    position: relative;
     top: -1px;
