minor fixes an buttons

--- a/src/mobile_wichtel.css
+++ b/src/mobile_wichtel.css
@@ -136,6 +136,8 @@ div.item.info {
 .wichteltracking {
     width: 120%;
 }
+.btn-tracking {
+    margin-left: 0;
 }
 @media (max-width: 484px){
 .subbanner {
