--- a/src/universal-styles.css
+++ b/src/universal-styles.css
@@ -31,7 +31,7 @@ h1 {
         margin: 0;
         font-family: Roboto-Medium, Arial, sans-serif;
         font-size: 4.1rem;
-        color: #4D61FC;
+        color: #49a3d1;
         line-height: 1.3;
      }
 
@@ -68,11 +68,14 @@ a {
     cursor: pointer;
 }
 p > a {
-    color: #4D61FC;
-    text-decoration: underline dotted;
+    color: #49a3d1;
     font-size: 1.8rem;
     top: 0;
     display: inline-block;
+}
+
+p > a:hover {
+    color:#3678b1;
 }
 
 .hidden {
@@ -80,7 +83,7 @@ p > a {
 }
 
 .editsuccess{
-    color: #4D61FC;
+    color: #49a3d1;
  animation: editsuccess 0.15s ease-in-out;
 
 }
