--- a/src/wichtel.css
+++ b/src/wichtel.css
@@ -115,7 +115,19 @@ button:hover {
     color: #e4e4e4;
     }
 
+a#editButton {
+    padding: 6px 12px;
+    border-radius: 4px;
+    background-color: #f4f4f4;
+    color:#1A1D21;
+    font-family: Roboto-Regular;
+    margin-bottom: 10px;
+    font-size: 1.6rem;
+}
 
+a#editButton:hover {
+    background-color: #3678b1;
+}
 
 
 div.msg > h1 {
@@ -160,7 +172,6 @@ div.msg > h1 {
 
 input[type="checkbox"] {
    position: relative;
-    top: -1px;
 }
 .codeInput {
     width: calc(100% - 33px);
@@ -199,7 +210,7 @@ h3 {
     font-size: 2.8rem;
     margin-bottom: 0;
     margin-top:60px;
-    color: #4D61FC;
+    color: #49a3d1;
   }
 div > p {
     grid-column: 2/3;
