--- a/src/style.css
+++ b/src/style.css
@@ -63,18 +63,21 @@ form {
     margin-left: 34px;
 }
 .item input:hover, .item select:hover, .item textarea:hover {
-    border: 1px solid #49a3d1;
+    border: 1px solid #4D61FC;
     }
 .item input:focus, .item select:focus, .item textarea:focus {
-        border: 1px solid #49a3d1;
+        border: 1px solid #4D61FC;
         }
 .item {
     position: relative;
     margin: 10px 0;
     }
 .item span {
-    color: #49a3d1;
+    color: #4D61FC;
     }
+.item > p {
+    font-size: 1.5rem;
+}
 .colums {
     display:flex;
     justify-content:space-between;
@@ -96,7 +99,7 @@ button {
     padding: 10px;
     border: none;
     border-radius: 5px; 
-    background:  #49a3d1;
+    background:  #4D61FC;
     font-size: 16px;
     color: #f4f4f4;
     cursor: pointer;
@@ -104,7 +107,7 @@ button {
     
     }
 button:hover {
-    background:  #3678b1;
+    background:  #3644B1;
     color: #e4e4e4;
     }
 
