--- a/src/wichtel.css
+++ b/src/wichtel.css
@@ -126,7 +126,7 @@ a#editButton {
 }
 
 a#editButton:hover {
-    background-color: #3678b1;
+    background-color: #c7ccd1;
 }
 
 
@@ -210,7 +210,7 @@ h3 {
     font-size: 2.8rem;
     margin-bottom: 0;
     margin-top:60px;
-    color: #49a3d1;
+    color: #4D61FC;
   }
 div > p {
     grid-column: 2/3;
