--- a/src/wichtel.css
+++ b/src/wichtel.css
@@ -219,6 +219,7 @@ font-size: 1.6rem;
 }
 .info > p {
     font-size: 1.5rem;
+    overflow-wrap: anywhere;
 }
 .wichteltracking {
     margin-bottom: 30px;
