--- a/src/mobile_wichtel.css
+++ b/src/mobile_wichtel.css
@@ -3,7 +3,7 @@
         width: 34%;
       }
       .container {
-        grid-template-columns: 5% 1fr 1fr 6%;
+        grid-template-columns: 5% 1fr 1fr 15%;
     }
 }
 @media (max-width: 1437px){
@@ -11,7 +11,7 @@
         display:none;
     }
     .container {
-        grid-template-columns: 5% 1fr 6%;
+        grid-template-columns: 5% 1fr 15%;
     }
 }
 @media (max-width: 1329px){
@@ -19,8 +19,12 @@
         width: 121%;
         padding-left: 171px;
       }
+      .container {
+        grid-template-columns: 5% 1fr 30%;
+    }
 
 }
+
 @media (max-width: 1130px){
     h1 {
         font-size: 32px;
@@ -111,9 +115,12 @@ h2 {
 p, p > a {
     font-size: 1.5rem;
 }
+.container {
+    grid-template-rows: 3.5rem 1fr;
+}
 }
 
-@media (max-width: 560px){
+@media (max-width: 550px){
     .wrapper {
         grid-row: 1/3;
     }
@@ -127,6 +134,7 @@ p, p > a {
     div > p, a {
         font-size: 1.5rem;
 }
+
 div.item.info {
     width: 120%;
   }
